# Server

./: .gitignore  CMakeLists.txt  NOTES  README.md  ser.cpp
Final/: CMakeLists.txt  server.cpp
OffLineTest/: meshTest.cpp
OffLineTest/Run/Log/: MeshTest
OffLineTest/Run/Log/01_29_16/: Log_01_29_16.txt  mesh.vtk
OffLineTest/Run/Log/01_30_08/: Log_01_30_08.txt
OffLineTest/Run/Log/01_30_39/: Log_01_30_39.txt  PointsFilt.pcd
OffLineTest/Run/Log/01_32_25/: mesh.vtk
OffLineTest/Run/Log/01_35_12/: Log_01_35_12.txt  mesh.vtk
OffLineTest/Run/Log/01_35_50/: Log_01_35_50.txt  mesh.vtk
OffLineTest/Run/step/: Log_05_57_03  Log_05_57_41  Log_06_10_41  Log_06_10_53  Log_06_11_07  Log_06_11_32  Log_06_11_53  Log_06_12_01  MeshTest  PointsFilt.pcd
OffLineTest/Run/step/11_32_37/: Log_11_32_37.txt  mesh.vtk
OffLineTest/Run/step/11_33_43/: mesh.vtk
OffLineTest/Run/step/11_34_32/: Log_11_34_32.txt
SerMult/: CMakeLists.txt  serMult.cpp
StaticTest/: CMakeLists.txt
StaticTest/Run/step/: Log_05_56_02  Log_06_09_46  Log_06_11_18  mesh.vtk
pois_test/: CMakeLists.txt  pois.cpp
serThread/: CMakeLists.txt  serThread.cpp  serThreadOLD.cpp
serThread/runs/NoFilt07/: Points.pcd  PointsFilt.pcd
serThread/runs/footStep/: mesh.vtk
serThread/runs/horse10006/: PointsFilt.pcd
serThread/runs/horse1000_02/: Points.pcd  mesh.vtk
serThread/runs/noFilt04/: PointsFilt.pcd
serThread/runs/noFilt05/: PointsFilt.pcd  mesh.vtk
serThread/runs/noFilt06/: Points.pcd  PointsFilt.pcd
serThread/runs/noFilt08/: mesh.vtk
serThread/runs/noFilt09/: PointsFilt.pcd  mesh.vtk
(+117 files in other folders)
